Javac2007/src/test/attr/error/annotation_missing_default_value.java
package test.attr.error;
@interface MyAnnotation {
    String valueA();
	String valueB() default "testB";
	String valueC();
	String valueD();
}
@MyAnnotation(valueA="testA")
public class annotation_missing_default_value  {}

